# XLS_TimeTable

./: .gitignore  Classes_Summary.xls  Classes_Summaryhtml.html  Item.py  Main.py  README.md  TimeTable.py  cl_sum.xlsx  output_timetable.xlsx  pyproject.toml  template.xlsx  test_all.py  timetable.xls  timetable.xlsx  xml_to_db.py
test_data/: have.xlsx  old_input.xlsx  output.xlsx
xlsx_to_xlsx/: Item.py
xlsx_to_xlsx/test_data/: output.xlsx
xml_to_xlsx/: template.xlsx  test_all.py  xml_to_db.py
xml_to_xlsx/test_data/: input.xml  output.xlsx
